# backend/src/app.js
@@ -36,6 +36,7 @@ app.get('/v0/listings/category', listings.getCategories);
 app.get('/v0/listings/:category', listings.getCatListings);
 app.get('/v0/member', listings.getMembers);
 app.post('/v0/member', listings.post);
+app.post('/v0/listings', listings.postListings);
 
 app.use((err, req, res, next) => {
   res.status(err.status).json({
